{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 32,
  "lineage": "814851ee-86cb-c00a-854d-c46f63c22c42",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856753288873:internet-gateway/igw-0242bcf3795cc7caf",
            "id": "igw-0242bcf3795cc7caf",
            "owner_id": "856753288873",
            "region": "ap-south-1",
            "tags": {
              "Name": "flask-express-prod-igw"
            },
            "tags_all": {
              "Name": "flask-express-prod-igw"
            },
            "vpc_id": "vpc-0f2a17bf6fc7ba07d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:loadbalancer/app/flask-express-prod-alb/cd19f2dc968a2d2d",
            "arn_suffix": "app/flask-express-prod-alb/cd19f2dc968a2d2d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "flask-express-prod-alb-1311867615.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:loadbalancer/app/flask-express-prod-alb/cd19f2dc968a2d2d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "flask-express-prod-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-0b257e689b8a2cc9d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01b90ba0b2908c45b"
              },
              {
                "subnet_id": "subnet-0b53e7a4c80d06fe1"
              }
            ],
            "subnets": [
              "subnet-01b90ba0b2908c45b",
              "subnet-0b53e7a4c80d06fe1"
            ],
            "tags": {
              "Name": "flask-express-prod-alb"
            },
            "tags_all": {
              "Name": "flask-express-prod-alb"
            },
            "vpc_id": "vpc-0f2a17bf6fc7ba07d",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:loadbalancer/app/flask-express-prod-alb/cd19f2dc968a2d2d"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:listener/app/flask-express-prod-alb/cd19f2dc968a2d2d/d04bff3737393caf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:listener/app/flask-express-prod-alb/cd19f2dc968a2d2d/d04bff3737393caf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:loadbalancer/app/flask-express-prod-alb/cd19f2dc968a2d2d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:listener/app/flask-express-prod-alb/cd19f2dc968a2d2d/d04bff3737393caf"
          },
          "dependencies": [
            "aws_lb.this",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:targetgroup/flask-express-prod-backend-tg/d11a2a9dedce0dc2",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:listener-rule/app/flask-express-prod-alb/cd19f2dc968a2d2d/d04bff3737393caf/bd126329ae5ebdee",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/api/*",
                      "/submit",
                      "/submit/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:listener-rule/app/flask-express-prod-alb/cd19f2dc968a2d2d/d04bff3737393caf/bd126329ae5ebdee",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:listener/app/flask-express-prod-alb/cd19f2dc968a2d2d/d04bff3737393caf",
            "priority": 100,
            "region": "ap-south-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:listener-rule/app/flask-express-prod-alb/cd19f2dc968a2d2d/d04bff3737393caf/bd126329ae5ebdee"
          },
          "dependencies": [
            "aws_lb.this",
            "aws_lb_listener.http_listener",
            "aws_lb_target_group.backend_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "frontend_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:targetgroup/flask-express-prod-frontend-tg/b905a99abf6cc30a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:listener-rule/app/flask-express-prod-alb/cd19f2dc968a2d2d/d04bff3737393caf/2a5dcef7dbf9a14d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:listener-rule/app/flask-express-prod-alb/cd19f2dc968a2d2d/d04bff3737393caf/2a5dcef7dbf9a14d",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:listener/app/flask-express-prod-alb/cd19f2dc968a2d2d/d04bff3737393caf",
            "priority": 200,
            "region": "ap-south-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:listener-rule/app/flask-express-prod-alb/cd19f2dc968a2d2d/d04bff3737393caf/2a5dcef7dbf9a14d"
          },
          "dependencies": [
            "aws_lb.this",
            "aws_lb_listener.http_listener",
            "aws_lb_target_group.frontend_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:targetgroup/flask-express-prod-backend-tg/d11a2a9dedce0dc2",
            "arn_suffix": "targetgroup/flask-express-prod-backend-tg/d11a2a9dedce0dc2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:targetgroup/flask-express-prod-backend-tg/d11a2a9dedce0dc2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:856753288873:loadbalancer/app/flask-express-prod-alb/cd19f2dc968a2d2d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "flask-express-prod-backend-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f2a17bf6fc7ba07d"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:targetgroup/flask-express-prod-backend-tg/d11a2a9dedce0dc2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:targetgroup/flask-express-prod-frontend-tg/b905a99abf6cc30a",
            "arn_suffix": "targetgroup/flask-express-prod-frontend-tg/b905a99abf6cc30a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:targetgroup/flask-express-prod-frontend-tg/b905a99abf6cc30a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:856753288873:loadbalancer/app/flask-express-prod-alb/cd19f2dc968a2d2d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "flask-express-prod-frontend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f2a17bf6fc7ba07d"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:856753288873:targetgroup/flask-express-prod-frontend-tg/b905a99abf6cc30a"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856753288873:route-table/rtb-0b7888d02502484cf",
            "id": "rtb-0b7888d02502484cf",
            "owner_id": "856753288873",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0242bcf3795cc7caf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "flask-express-prod-public-rt"
            },
            "tags_all": {
              "Name": "flask-express-prod-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2a17bf6fc7ba07d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "856753288873",
            "id": "rtb-0b7888d02502484cf",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.50.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a4dce11777300ec",
            "region": "ap-south-1",
            "route_table_id": "rtb-0b7888d02502484cf",
            "subnet_id": "subnet-0b53e7a4c80d06fe1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "10.50.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8921aa4a1608158",
            "region": "ap-south-1",
            "route_table_id": "rtb-0b7888d02502484cf",
            "subnet_id": "subnet-01b90ba0b2908c45b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856753288873:security-group/sg-0b257e689b8a2cc9d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b257e689b8a2cc9d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "flask-express-prod-alb-sg",
            "name_prefix": "",
            "owner_id": "856753288873",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f2a17bf6fc7ba07d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "856753288873",
            "id": "sg-0b257e689b8a2cc9d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "task_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856753288873:security-group/sg-0eb81954a2d1fa9cc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb81954a2d1fa9cc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach tasks",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b257e689b8a2cc9d"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "flask-express-prod-task-sg",
            "name_prefix": "",
            "owner_id": "856753288873",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f2a17bf6fc7ba07d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "856753288873",
            "id": "sg-0eb81954a2d1fa9cc",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.50.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856753288873:subnet/subnet-0b53e7a4c80d06fe1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.50.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b53e7a4c80d06fe1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "856753288873",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "flask-express-prod-public-10.50.1.0-24"
            },
            "tags_all": {
              "Name": "flask-express-prod-public-10.50.1.0-24"
            },
            "vpc_id": "vpc-0f2a17bf6fc7ba07d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "856753288873",
            "id": "subnet-0b53e7a4c80d06fe1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "10.50.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856753288873:subnet/subnet-01b90ba0b2908c45b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.50.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b90ba0b2908c45b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "856753288873",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "flask-express-prod-public-10.50.2.0-24"
            },
            "tags_all": {
              "Name": "flask-express-prod-public-10.50.2.0-24"
            },
            "vpc_id": "vpc-0f2a17bf6fc7ba07d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "856753288873",
            "id": "subnet-01b90ba0b2908c45b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856753288873:vpc/vpc-0f2a17bf6fc7ba07d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.50.0.0/16",
            "default_network_acl_id": "acl-0df333ab2bfee4791",
            "default_route_table_id": "rtb-04c76dbda1510cfb1",
            "default_security_group_id": "sg-0b6b3322f53fcbb5b",
            "dhcp_options_id": "dopt-01a5e9d2a9df7070c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f2a17bf6fc7ba07d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04c76dbda1510cfb1",
            "owner_id": "856753288873",
            "region": "ap-south-1",
            "tags": {
              "Name": "flask-express-prod-vpc"
            },
            "tags_all": {
              "Name": "flask-express-prod-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "856753288873",
            "id": "vpc-0f2a17bf6fc7ba07d",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}